updated graphs and added diffusion generation

--- a/dataset_generation.ipynb
+++ b/dataset_generation.ipynb
@@ -1,6 +1,59 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import io\n",
+    "import networkx as nx\n",
+    "import scipy as sp\n",
+    "import numpy as np\n",
+    "rng = np.random.default_rng()\n",
+    "from collections import deque\n",
+    "from pathlib import Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def monte_carlo_diffusion(G: nx.DiGraph, k: int):\n",
+    "  seed_nodes = [i.item() for i in rng.choice(list(G.nodes()), k, replace=False)]\n",
+    "  activated_nodes = set(seed_nodes)\n",
+    "  queue = deque(seed_nodes)\n",
+    "  diffusion_edges = []\n",
+    "  diffusion_timestamp_map = {}\n",
+    "  for node in seed_nodes:\n",
+    "    diffusion_timestamp_map[node] = 0\n",
+    "  while queue:\n",
+    "    node = queue.popleft()\n",
+    "    for neighbor in G.neighbors(node):\n",
+    "      if neighbor not in activated_nodes:\n",
+    "        if rng.random() < G[node][neighbor]['weight']:\n",
+    "          activated_nodes.add(neighbor)\n",
+    "          queue.append(neighbor)\n",
+    "          diffusion_edges.append((node, neighbor))\n",
+    "          diffusion_timestamp_map[neighbor] = diffusion_timestamp_map[node] + 1\n",
+    "  \n",
+    "  n = G.number_of_nodes()\n",
+    "  diffusion_timestamp_temp = [[] for _ in range(n)]\n",
+    "  diffusion_timestamp = []\n",
+    "  for k, v in diffusion_timestamp_map.items():\n",
+    "    diffusion_timestamp_temp[v].append(k)\n",
+    "\n",
+    "  for t in range(len(diffusion_timestamp_temp)):\n",
+    "    if len(diffusion_timestamp_temp[t]) > 0:\n",
+    "      diffusion_timestamp.append(diffusion_timestamp_temp[t])\n",
+    "\n",
+    "  return diffusion_edges, diffusion_timestamp"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -9,34 +62,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4999918\n"
+      "19997118\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "import io\n",
-    "import networkx as nx\n",
-    "import scipy as sp\n",
-    "\n",
     "n = 10000\n",
-    "p = 0.05\n",
+    "p = 0.2\n",
     "G = nx.fast_gnp_random_graph(n, p, directed=True)\n",
     "print(G.number_of_edges())\n",
     "\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.6)\n",
+    "    w['weight'] = random.uniform(0, 0.3)\n",
     "\n",
-    "fh = open(f\"./datasets/synthetic/er_{n}_{str(p).replace('.', '')}.mtx\", \"wb\")\n",
+    "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
+    "fh = open(f\"./datasets/synthetic/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 10000\n",
+    "p = 0.2\n",
+    "\n",
+    "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
+    "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
+    "pdir_graph = Path(f\"./datasets/synthetic/{fname}/{fname}.mtx\")\n",
+    "pdir_diffusion = Path(f\"./datasets/synthetic/{fname}/diffusions\")\n",
+    "pdir_timestamps = pdir_diffusion / \"timestamps/\"\n",
+    "pdir_edges = pdir_diffusion / \"edges/\"\n",
+    "\n",
+    "pdir_timestamps.mkdir(parents=True, exist_ok=True)\n",
+    "pdir_edges.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "for i in range(200):\n",
+    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
+    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
+    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
+    "  with p_ts.open(\"w\") as fh:\n",
+    "    for ts in d_timestamp:\n",
+    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "  with p_edges.open(\"w\") as fh:\n",
+    "    fh.write(f\"#Source Target\\n\")\n",
+    "    for e in d_edges:\n",
+    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
    ]
   },
   {
@@ -48,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21624\n"
+      "21449\n"
      ]
     }
    ],
@@ -68,23 +152,61 @@
     "print(G.number_of_edges())\n",
     "\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.6)\n",
+    "    w['weight'] = random.uniform(0, 0.3)\n",
     "\n",
-    "fh = open(f\"./datasets/synthetic/sf_{n}_{str(a).replace('.', '')}_{str(b).replace('.', '')}_{str(c).replace('.', '')}.mtx\", \"wb\")\n",
+    "fname = f\"sf_{n}_{str(a).replace('.', '')}_{str(b).replace('.', '')}_{str(c).replace('.', '')}\"\n",
+    "fh = open(f\"./datasets/synthetic/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1000\n",
+    "a = 0.41\n",
+    "b = 0.54\n",
+    "c = 0.05\n",
+    "\n",
+    "fname = f\"sf_{n}_{str(a).replace('.', '')}_{str(b).replace('.', '')}_{str(c).replace('.', '')}\"\n",
+    "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
+    "pdir_graph = Path(f\"./datasets/synthetic/{fname}/{fname}.mtx\")\n",
+    "pdir_diffusion = Path(f\"./datasets/synthetic/{fname}/diffusions\")\n",
+    "pdir_timestamps = pdir_diffusion / \"timestamps/\"\n",
+    "pdir_edges = pdir_diffusion / \"edges/\"\n",
+    "\n",
+    "pdir_timestamps.mkdir(parents=True, exist_ok=True)\n",
+    "pdir_edges.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "for i in range(200):\n",
+    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
+    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
+    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
+    "  with p_ts.open(\"w\") as fh:\n",
+    "    for ts in d_timestamp:\n",
+    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "  with p_edges.open(\"w\") as fh:\n",
+    "    fh.write(f\"#Source Target\\n\")\n",
+    "    for e in d_edges:\n",
+    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Higgs"
+    "Real World Networks"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,16 +215,49 @@
     "fh.close()\n",
     "\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.6)\n",
+    "    w['weight'] = random.uniform(0, 0.3)\n",
     "\n",
-    "fh = open(f\"./datasets/real/higgs.mtx\", \"wb\")\n",
+    "fname = \"higgs\"\n",
+    "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"higgs\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = Path(f\"./datasets/real/{fname}/{fname}.mtx\")\n",
+    "pdir_diffusion = Path(f\"./datasets/real/{fname}/diffusions\")\n",
+    "pdir_timestamps = pdir_diffusion / \"timestamps/\"\n",
+    "pdir_edges = pdir_diffusion / \"edges/\"\n",
+    "\n",
+    "pdir_timestamps.mkdir(parents=True, exist_ok=True)\n",
+    "pdir_edges.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "for i in range(200):\n",
+    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
+    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
+    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
+    "  with p_ts.open(\"w\") as fh:\n",
+    "    for ts in d_timestamp:\n",
+    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "  with p_edges.open(\"w\") as fh:\n",
+    "    fh.write(f\"#Source Target\\n\")\n",
+    "    for e in d_edges:\n",
+    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,16 +265,49 @@
     "G = nx.read_edgelist(fh, create_using=nx.DiGraph, nodetype=int)\n",
     "\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.6)\n",
+    "    w['weight'] = random.uniform(0, 0.3)\n",
     "\n",
-    "fh = open(f\"./datasets/real/ego-twitter.mtx\", \"wb\")\n",
+    "fname = \"ego-twitter\"\n",
+    "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"ego-twitter\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = Path(f\"./datasets/real/{fname}/{fname}.mtx\")\n",
+    "pdir_diffusion = Path(f\"./datasets/real/{fname}/diffusions\")\n",
+    "pdir_timestamps = pdir_diffusion / \"timestamps/\"\n",
+    "pdir_edges = pdir_diffusion / \"edges/\"\n",
+    "\n",
+    "pdir_timestamps.mkdir(parents=True, exist_ok=True)\n",
+    "pdir_edges.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "for i in range(200):\n",
+    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
+    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
+    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
+    "  with p_ts.open(\"w\") as fh:\n",
+    "    for ts in d_timestamp:\n",
+    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "  with p_edges.open(\"w\") as fh:\n",
+    "    fh.write(f\"#Source Target\\n\")\n",
+    "    for e in d_edges:\n",
+    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +316,44 @@
     "\n",
     "G = G.to_directed()\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.6)\n",
+    "    w['weight'] = random.uniform(0, 0.3)\n",
     "\n",
-    "fh = open(f\"./datasets/real/ego-facebook.mtx\", \"wb\")\n",
+    "fname = \"ego-facebook\"\n",
+    "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"ego-facebook\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = Path(f\"./datasets/real/{fname}/{fname}.mtx\")\n",
+    "pdir_diffusion = Path(f\"./datasets/real/{fname}/diffusions\")\n",
+    "pdir_timestamps = pdir_diffusion / \"timestamps/\"\n",
+    "pdir_edges = pdir_diffusion / \"edges/\"\n",
+    "\n",
+    "pdir_timestamps.mkdir(parents=True, exist_ok=True)\n",
+    "pdir_edges.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "for i in range(200):\n",
+    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
+    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
+    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
+    "  with p_ts.open(\"w\") as fh:\n",
+    "    for ts in d_timestamp:\n",
+    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "  with p_edges.open(\"w\") as fh:\n",
+    "    fh.write(f\"#Source Target\\n\")\n",
+    "    for e in d_edges:\n",
+    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
    ]
   }
  ],
