added simple node features

--- a/dataset_generation.ipynb
+++ b/dataset_generation.ipynb
@@ -57,7 +57,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Erdos-Renyi"
+    "## Erdos-Renyi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Graph"
    ]
   },
   {
@@ -85,7 +92,54 @@
     "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
     "fh = open(f\"./datasets/synthetic/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
+    "\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Node Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1000\n",
+    "p = 0.05\n",
+    "\n",
+    "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
+    "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
+    "pdir_graph = pdir / f\"{fname}.mtx\"\n",
+    "pdir_feats = pdir / \"feats.npy\"\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "cc = nx.clustering(G)\n",
+    "out_degrees = {v: G.out_degree(v) for v in G.nodes()}\n",
+    "in_degrees = {v: G.in_degree(v) for v in G.nodes()}\n",
+    "pr = nx.pagerank(G)\n",
+    "\n",
+    "feats = np.zeros((G.number_of_nodes(), 4))\n",
+    "for i, v in enumerate(G.nodes()):\n",
+    "  feats[i, 0] = cc[v]\n",
+    "  feats[i, 1] = out_degrees[v]\n",
+    "  feats[i, 2] = in_degrees[v]\n",
+    "  feats[i, 3] = pr[v]\n",
+    "with pdir_feats.open(\"wb\") as fh:\n",
+    "  np.save(fh, feats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Diffusion Datasets"
    ]
   },
   {
@@ -94,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 10000\n",
+    "n = 1000\n",
     "p = 0.2\n",
     "\n",
     "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
@@ -127,7 +181,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scale Free"
+    "## Scale Free"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Graph"
    ]
   },
   {
@@ -158,6 +219,54 @@
     "fh = open(f\"./datasets/synthetic/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Node Feautres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 1000\n",
+    "a = 0.41\n",
+    "b = 0.54\n",
+    "c = 0.05\n",
+    "\n",
+    "fname = f\"sf_{n}_{str(a).replace('.', '')}_{str(b).replace('.', '')}_{str(c).replace('.', '')}\"\n",
+    "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
+    "pdir_graph = pdir / f\"{fname}.mtx\"\n",
+    "pdir_feats = pdir / \"feats.npy\"\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "cc = nx.clustering(G)\n",
+    "out_degrees = {v: G.out_degree(v) for v in G.nodes()}\n",
+    "in_degrees = {v: G.in_degree(v) for v in G.nodes()}\n",
+    "pr = nx.pagerank(G)\n",
+    "\n",
+    "feats = np.zeros((G.number_of_nodes(), 4))\n",
+    "for i, v in enumerate(G.nodes()):\n",
+    "  feats[i, 0] = cc[v]\n",
+    "  feats[i, 1] = out_degrees[v]\n",
+    "  feats[i, 2] = in_degrees[v]\n",
+    "  feats[i, 3] = pr[v]\n",
+    "with pdir_feats.open(\"wb\") as fh:\n",
+    "  np.save(fh, feats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Diffusion Datasets"
    ]
   },
   {
@@ -201,7 +310,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Real World Networks"
+    "## Real World Networks"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Higgs Twitter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Graph"
    ]
   },
   {
@@ -221,6 +344,49 @@
     "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Node Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"higgs\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = pdir / f\"{fname}.mtx\"\n",
+    "pdir_feats = pdir / \"feats.npy\"\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "cc = nx.clustering(G)\n",
+    "out_degrees = {v: G.out_degree(v) for v in G.nodes()}\n",
+    "in_degrees = {v: G.in_degree(v) for v in G.nodes()}\n",
+    "pr = nx.pagerank(G)\n",
+    "\n",
+    "feats = np.zeros((G.number_of_nodes(), 4))\n",
+    "for i, v in enumerate(G.nodes()):\n",
+    "  feats[i, 0] = cc[v]\n",
+    "  feats[i, 1] = out_degrees[v]\n",
+    "  feats[i, 2] = in_degrees[v]\n",
+    "  feats[i, 3] = pr[v]\n",
+    "with pdir_feats.open(\"wb\") as fh:\n",
+    "  np.save(fh, feats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Diffusion Datasets"
    ]
   },
   {
@@ -256,6 +422,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ego-Twitter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
@@ -271,6 +451,49 @@
     "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Node Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"ego-twitter\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = pdir / f\"{fname}.mtx\"\n",
+    "pdir_feats = pdir / \"feats.npy\"\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "cc = nx.clustering(G)\n",
+    "out_degrees = {v: G.out_degree(v) for v in G.nodes()}\n",
+    "in_degrees = {v: G.in_degree(v) for v in G.nodes()}\n",
+    "pr = nx.pagerank(G)\n",
+    "\n",
+    "feats = np.zeros((G.number_of_nodes(), 4))\n",
+    "for i, v in enumerate(G.nodes()):\n",
+    "  feats[i, 0] = cc[v]\n",
+    "  feats[i, 1] = out_degrees[v]\n",
+    "  feats[i, 2] = in_degrees[v]\n",
+    "  feats[i, 3] = pr[v]\n",
+    "with pdir_feats.open(\"wb\") as fh:\n",
+    "  np.save(fh, feats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Diffusion Datasets"
    ]
   },
   {
@@ -306,6 +529,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ego-Facebook"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
@@ -322,6 +559,49 @@
     "fh = open(f\"./datasets/real/{fname}/{fname}.mtx\", \"wb\")\n",
     "m = nx.to_scipy_sparse_array(G)\n",
     "sp.io.mmwrite(fh, m, precision=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Node Features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"ego-facebook\"\n",
+    "pdir = Path(f\"./datasets/real/{fname}\")\n",
+    "pdir_graph = pdir / f\"{fname}.mtx\"\n",
+    "pdir_feats = pdir / \"feats.npy\"\n",
+    "\n",
+    "with pdir_graph.open(\"rb\") as fh:\n",
+    "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
+    "\n",
+    "cc = nx.clustering(G)\n",
+    "out_degrees = {v: G.out_degree(v) for v in G.nodes()}\n",
+    "in_degrees = {v: G.in_degree(v) for v in G.nodes()}\n",
+    "pr = nx.pagerank(G)\n",
+    "\n",
+    "feats = np.zeros((G.number_of_nodes(), 4))\n",
+    "for i, v in enumerate(G.nodes()):\n",
+    "  feats[i, 0] = cc[v]\n",
+    "  feats[i, 1] = out_degrees[v]\n",
+    "  feats[i, 2] = in_degrees[v]\n",
+    "  feats[i, 3] = pr[v]\n",
+    "with pdir_feats.open(\"wb\") as fh:\n",
+    "  np.save(fh, feats)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Diffusion Datasets"
    ]
   },
   {
