added small sample graph

--- a/dataset_generation.ipynb
+++ b/dataset_generation.ipynb
@@ -18,12 +18,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
     "def monte_carlo_diffusion(G: nx.DiGraph, k: int):\n",
     "  seed_nodes = [i.item() for i in rng.choice(list(G.nodes()), k, replace=False)]\n",
+    "  activated_nodes = set(seed_nodes)\n",
+    "  queue = deque(seed_nodes)\n",
+    "  diffusion_edges = []\n",
+    "  diffusion_timestamp_map = {}\n",
+    "  for node in seed_nodes:\n",
+    "    diffusion_timestamp_map[node] = 0\n",
+    "  while queue:\n",
+    "    node = queue.popleft()\n",
+    "    for neighbor in G.neighbors(node):\n",
+    "      if neighbor not in activated_nodes:\n",
+    "        if rng.random() < G[node][neighbor]['weight']:\n",
+    "          activated_nodes.add(neighbor)\n",
+    "          queue.append(neighbor)\n",
+    "          diffusion_edges.append((node, neighbor))\n",
+    "          diffusion_timestamp_map[neighbor] = diffusion_timestamp_map[node] + 1\n",
+    "  \n",
+    "  n = G.number_of_nodes()\n",
+    "  diffusion_timestamp_temp = [[] for _ in range(n)]\n",
+    "  diffusion_timestamp = []\n",
+    "  for k, v in diffusion_timestamp_map.items():\n",
+    "    diffusion_timestamp_temp[v].append(k)\n",
+    "\n",
+    "  for t in range(len(diffusion_timestamp_temp)):\n",
+    "    if len(diffusion_timestamp_temp[t]) > 0:\n",
+    "      diffusion_timestamp.append(diffusion_timestamp_temp[t])\n",
+    "\n",
+    "  return diffusion_edges, diffusion_timestamp\n",
+    "\n",
+    "def monte_carlo_diffusion_nodes(G: nx.DiGraph, seed_nodes: list[int]):\n",
     "  activated_nodes = set(seed_nodes)\n",
     "  queue = deque(seed_nodes)\n",
     "  diffusion_edges = []\n",
@@ -69,31 +98,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "19997118\n"
+      "965\n"
      ]
     }
    ],
    "source": [
-    "n = 10000\n",
-    "p = 0.2\n",
+    "n = 100\n",
+    "p = 0.1\n",
     "G = nx.fast_gnp_random_graph(n, p, directed=True)\n",
     "print(G.number_of_edges())\n",
     "\n",
     "for (u,v,w) in G.edges(data=True):\n",
-    "    w['weight'] = random.uniform(0, 0.3)\n",
+    "    w['weight'] = rng.normal(0.3, 0.25)\n",
     "\n",
     "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
-    "fh = open(f\"./datasets/synthetic/{fname}/{fname}.mtx\", \"wb\")\n",
-    "m = nx.to_scipy_sparse_array(G)\n",
+    "path = Path(f\"./datasets/synthetic/{fname}/\")\n",
+    "path.mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "sp.io.mmwrite(fh, m, precision=5)"
+    "path_graph = path / f\"{fname}.mtx\"\n",
+    "with path_graph.open('wb') as fh:\n",
+    "  m = nx.to_scipy_sparse_array(G)\n",
+    "  sp.io.mmwrite(fh, m, precision=5)"
    ]
   },
   {
@@ -105,12 +137,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000\n",
-    "p = 0.05\n",
+    "n = 100\n",
+    "p = 0.1\n",
     "\n",
     "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
     "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
@@ -144,12 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 1000\n",
-    "p = 0.2\n",
+    "n = 100\n",
+    "p = 0.1\n",
     "\n",
     "fname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
     "pdir = Path(f\"./datasets/synthetic/{fname}\")\n",
@@ -164,17 +196,20 @@
     "with pdir_graph.open(\"rb\") as fh:\n",
     "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
     "\n",
-    "for i in range(200):\n",
-    "  d_edges, d_timestamp = monte_carlo_diffusion(G, 1)\n",
-    "  p_ts = pdir_timestamps / f\"{i}.txt\"\n",
-    "  p_edges = pdir_edges / f\"{i}.edgelist\"\n",
-    "  with p_ts.open(\"w\") as fh:\n",
-    "    for ts in d_timestamp:\n",
-    "      fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
-    "  with p_edges.open(\"w\") as fh:\n",
-    "    fh.write(f\"#Source Target\\n\")\n",
-    "    for e in d_edges:\n",
-    "      fh.write(\" \".join(map(str, e)) + \"\\n\")"
+    "for i in range(100):\n",
+    "  seed_nodes = [i.item() for i in rng.choice(list(G.nodes()), 1, replace=False)]\n",
+    "  n_cascades = 5\n",
+    "  for j in range(n_cascades):\n",
+    "    d_edges, d_timestamp = monte_carlo_diffusion_nodes(G, seed_nodes)\n",
+    "    p_ts = pdir_timestamps / f\"{i*n_cascades + j}.txt\"\n",
+    "    p_edges = pdir_edges / f\"{i*n_cascades + j}.edgelist\"\n",
+    "    with p_ts.open(\"w\") as fh:\n",
+    "      for ts in d_timestamp:\n",
+    "        fh.write(\" \".join(map(str, ts)) + \"\\n\")\n",
+    "    with p_edges.open(\"w\") as fh:\n",
+    "      fh.write(f\"#Source Target\\n\")\n",
+    "      for e in d_edges:\n",
+    "        fh.write(\" \".join(map(str, e)) + \"\\n\")"
    ]
   },
   {
