--- a/m1test.ipynb
+++ b/m1test.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/sbharg/homework/ut_austin/ece381k_mlnetworks/gnn_influence_probs/.venv/lib/python3.12/site-packages/torch_geometric/typing.py:68: UserWarning: An issue occurred while importing 'pyg-lib'. Disabling its usage. Stacktrace: dlopen(/Users/sbharg/homework/ut_austin/ece381k_mlnetworks/gnn_influence_probs/.venv/lib/python3.12/site-packages/libpyg.so, 0x0006): Library not loaded: /Library/Frameworks/Python.framework/Versions/3.12/Python\n",
-      "  Referenced from: <E87A820F-D734-3F45-AFBE-9D80043A97C0> /Users/sbharg/homework/ut_austin/ece381k_mlnetworks/gnn_influence_probs/.venv/lib/python3.12/site-packages/libpyg.so\n",
-      "  Reason: tried: '/Library/Frameworks/Python.framework/Versions/3.12/Python' (no such file), '/System/Volumes/Preboot/Cryptexes/OS/Library/Frameworks/Python.framework/Versions/3.12/Python' (no such file), '/Library/Frameworks/Python.framework/Versions/3.12/Python' (no such file)\n",
-      "  warnings.warn(f\"An issue occurred while importing 'pyg-lib'. \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -40,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,13 +190,13 @@
     "gname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
     "path = Path(f\"datasets/synthetic/{gname}\")\n",
     "\n",
-    "with open(path / f\"{gname}.mtx\", \"rb\") as fh:\n",
+    "with open(path / f\"graph.mtx\", \"rb\") as fh:\n",
     "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,13 +204,21 @@
      "output_type": "stream",
      "text": [
       "Training model (k = 100)...\n",
-      "Epoch 1/30, Avg Loss: 130.5900\n",
-      "Epoch 11/30, Avg Loss: 110.7237\n",
-      "Epoch 21/30, Avg Loss: 104.9525\n",
-      "Epoch 30/30, Avg Loss: 104.0364\n",
-      "Training complete.\n",
-      "\n",
-      "\n"
+      "Epoch 1/30, Avg Loss: nan\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 27\u001b[0m\n\u001b[1;32m     25\u001b[0m model \u001b[38;5;241m=\u001b[39m GNNIndependentCascade(\u001b[38;5;241m64\u001b[39m, \u001b[38;5;241m16\u001b[39m, n, m, num_layers\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m     26\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39moptim\u001b[38;5;241m.\u001b[39mAdam(model\u001b[38;5;241m.\u001b[39mparameters(), lr\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m, weight_decay\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5e-4\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m \u001b[43mtrain_model\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mk_cascades\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m30\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mk_cascades\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     29\u001b[0m model\u001b[38;5;241m.\u001b[39meval()\n\u001b[1;32m     30\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[3], line 62\u001b[0m, in \u001b[0;36mtrain_model\u001b[0;34m(model, optimizer, data, cascades, num_epochs, batch_size)\u001b[0m\n\u001b[1;32m     59\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[1;32m     60\u001b[0m edge_probs \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mforward(data)\n\u001b[0;32m---> 62\u001b[0m batch_loss \u001b[38;5;241m=\u001b[39m \u001b[43mcompute_loss\u001b[49m\u001b[43m(\u001b[49m\u001b[43medge_probs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdata\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43medge_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mbatch\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     63\u001b[0m batch_loss\u001b[38;5;241m.\u001b[39mbackward()\n\u001b[1;32m     64\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mstep()\n",
+      "Cell \u001b[0;32mIn[2], line 58\u001b[0m, in \u001b[0;36mcompute_loss\u001b[0;34m(edge_probs, edge_index, cascades)\u001b[0m\n\u001b[1;32m     56\u001b[0m total_log_likelihood \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.0\u001b[39m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m cascade \u001b[38;5;129;01min\u001b[39;00m cascades:\n\u001b[0;32m---> 58\u001b[0m   total_log_likelihood \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mcompute_cascade_likelihood\u001b[49m\u001b[43m(\u001b[49m\u001b[43medge_probs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43medge_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcascade\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     60\u001b[0m \u001b[38;5;66;03m# Return negative log-likelihood as the loss\u001b[39;00m\n\u001b[1;32m     61\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;241m-\u001b[39mtotal_log_likelihood\n",
+      "Cell \u001b[0;32mIn[2], line 30\u001b[0m, in \u001b[0;36mcompute_cascade_likelihood\u001b[0;34m(edge_probs, edge_index, cascade, epsilon)\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m v \u001b[38;5;129;01min\u001b[39;00m curr_activated:\n\u001b[1;32m     28\u001b[0m   \u001b[38;5;66;03m# Probability of activation from parents\u001b[39;00m\n\u001b[1;32m     29\u001b[0m   parents \u001b[38;5;241m=\u001b[39m src[(dst \u001b[38;5;241m==\u001b[39m v) \u001b[38;5;241m&\u001b[39m activated[src]]\n\u001b[0;32m---> 30\u001b[0m   activated_parents \u001b[38;5;241m=\u001b[39m parents[\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43misin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mparents\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mprev_activated\u001b[49m\u001b[43m)\u001b[49m]\n\u001b[1;32m     31\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(activated_parents) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     32\u001b[0m     prob_v_activated \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m torch\u001b[38;5;241m.\u001b[39mprod(\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m-\u001b[39m edge_probs[torch\u001b[38;5;241m.\u001b[39misin(src, activated_parents) \u001b[38;5;241m&\u001b[39m (dst \u001b[38;5;241m==\u001b[39m v)])\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
