--- a/m3.ipynb
+++ b/m3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,26 +23,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class CascadeGNN(nn.Module):\n",
-    "    def __init__(self, num_nodes, hidden_dim=64, num_layers=3):\n",
+    "    def __init__(self, num_nodes, num_edges, node_dim=64, hidden_dim=16, num_layers=2):\n",
     "        super(CascadeGNN, self).__init__()\n",
     "        self.num_nodes = num_nodes\n",
+    "        self.num_edges = num_edges\n",
+    "        self.node_dim = node_dim\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.num_layers = num_layers\n",
     "        \n",
     "        # Initial node embedding layer\n",
-    "        self.node_embedding = nn.Embedding(num_nodes, hidden_dim)\n",
-    "        \n",
+    "        self.node_embedding = nn.Embedding(self.num_nodes, self.node_dim)\n",
+    "        #self.edge_emb = nn.Parameter(torch.Tensor(num_nodes, num_nodes, hidden_dim))\n",
+    "        self.edge_embedding = nn.Embedding(self.num_edges, self.hidden_dim)\n",
+    "\n",
     "        # GNN layers\n",
-    "        self.convs = nn.ModuleList()\n",
-    "        for _ in range(num_layers):\n",
-    "            self.convs.append(GCNConv(hidden_dim, hidden_dim))\n",
+    "        self.convs = nn.ModuleList([\n",
+    "            GATConv(self.node_dim if i == 0 else hidden_dim, hidden_dim) \n",
+    "            for i in range(num_layers)\n",
+    "        ])\n",
     "            \n",
     "        # Edge probability prediction layer\n",
     "        self.edge_mlp = nn.Sequential(\n",
-    "            nn.Linear(hidden_dim * 2, hidden_dim),\n",
+    "            nn.Linear(hidden_dim * 3, hidden_dim),\n",
     "            nn.ReLU(),\n",
     "            nn.Linear(hidden_dim, 1),\n",
     "            nn.Sigmoid()\n",
@@ -50,20 +57,24 @@
     "        \n",
     "    def forward(self, edge_index):\n",
     "        # Get initial node embeddings\n",
-    "        x = self.node_embedding(torch.arange(self.num_nodes).to(edge_index.device))\n",
-    "        \n",
+    "        x = self.node_embedding(torch.arange(self.num_nodes))\n",
+    "        #src, dst = edge_index\n",
+    "        #edge_arr = self.edge_emb[src, dst]\n",
+    "        edge_emb = self.edge_embedding(torch.arange(self.num_edges))\n",
+    "\n",
     "        # Apply GNN layers\n",
     "        for conv in self.convs:\n",
-    "            x = conv(x, edge_index)\n",
-    "            x = F.relu(x)\n",
+    "            x = conv(x, edge_index, edge_attr=edge_emb)\n",
+    "            x = F.gelu(x)\n",
     "            x = F.dropout(x, p=0.1, training=self.training)\n",
     "            \n",
     "        # Compute edge probabilities for all edges\n",
     "        edge_probabilities = {}\n",
     "        for i in range(edge_index.size(1)):\n",
     "            source, target = edge_index[:, i]\n",
-    "            combined_features = torch.cat([x[source], x[target]], dim=0)\n",
-    "            prob = self.edge_mlp(combined_features)\n",
+    "            #edge_repr = torch.cat([torch.add(x[source], x[target]), edge_emb[i]], dim=0)\n",
+    "            edge_repr = torch.cat([x[source], x[target], edge_emb[i]], dim=0)\n",
+    "            prob = self.edge_mlp(edge_repr)\n",
     "            edge_probabilities[(source.item(), target.item())] = prob\n",
     "        \n",
     "        return edge_probabilities\n",
@@ -72,11 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_cascade_likelihood(num_nodes, edge_probs, cascade, eps=1e-6):\n",
+    "def compute_cascade_likelihood(edge_probs, adj_list, cascade, eps=1e-6):\n",
     "    \"\"\"\n",
     "    Compute the negative log likelihood of observing a cascade given edge probabilities\n",
     "    \n",
@@ -107,16 +118,20 @@
     "        for v in curr_activated:\n",
     "            # Probability of activation from parents\n",
     "            if prev_activated:\n",
-    "                parents = set([u for u in range(num_nodes) if (u, v) in edge_probs and u in prev_activated])\n",
-    "                prob = [1 - edge_probs[(u, v)] for u in parents]\n",
+    "                #parents = set([u for u in range(num_nodes) if (u, v) in edge_probs and u in prev_activated])\n",
+    "                parents = adj_list[v][0]\n",
+    "                activated_parents = parents.intersection(set(prev_activated))\n",
+    "                prob = [1 - edge_probs[(u, v)] for u in activated_parents]\n",
     "                prob = torch.cat(prob)\n",
     "                prob_not_activated = torch.prod(prob)\n",
     "                log_likelihood += torch.log(1 - prob_not_activated + eps)\n",
     "            if next_activated:\n",
-    "                children = set([w for w in range(num_nodes) if (v, w) in edge_probs and w not in activated_nodes and w not in set(next_activated)])\n",
-    "                if not children:\n",
+    "                children = adj_list[v][1]\n",
+    "                non_activated_children = children.difference(activated_nodes).difference(set(next_activated))\n",
+    "                #children = set([w for w in range(num_nodes) if (v, w) in edge_probs and w not in activated_nodes and w not in set(next_activated)])\n",
+    "                if not non_activated_children:\n",
     "                    continue\n",
-    "                prob = [1 - edge_probs[(v, w)] for w in children]\n",
+    "                prob = [1 - edge_probs[(v, w)] for w in non_activated_children]\n",
     "                prob = torch.cat(prob)\n",
     "                #print(prob)\n",
     "                prob_not_activated = torch.prod(prob)\n",
@@ -124,7 +139,7 @@
     "    \n",
     "    return log_likelihood\n",
     "\n",
-    "def compute_loss(num_nodes, edge_probs, edge_index, cascades):\n",
+    "def compute_loss(edge_probs, adj_list, cascades, eps=1e-6):\n",
     "  \"\"\"\n",
     "  Compute the negative log-likelihood loss for multiple cascades.\n",
     "  \n",
@@ -139,7 +154,7 @@
     "  \"\"\"\n",
     "  total_log_likelihood = 0.0\n",
     "  for cascade in cascades:\n",
-    "    total_log_likelihood += compute_cascade_likelihood(num_nodes, edge_probs, cascade)\n",
+    "    total_log_likelihood += compute_cascade_likelihood(edge_probs, adj_list, cascade, eps=eps)\n",
     "  \n",
     "  # Return negative log-likelihood as the loss\n",
     "  #print(-total_log_likelihood)\n",
@@ -148,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train_cascade_gnn(model, num_nodes, edge_index, cascades, num_epochs=100, lr=0.001, verbose=True):\n",
+    "def train_cascade_gnn(model, edge_index, cascades, adj_list, num_epochs=100, batch_size = 50, lr=0.001, verbose=True):\n",
     "    \"\"\"\n",
     "    Train the GNN model using the observed cascades\n",
     "    \n",
@@ -165,41 +180,51 @@
     "        lr: Learning rate\n",
     "    \"\"\"\n",
     "    model.train()\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)\n",
+    "    optimizer = torch.optim.Adam(model.parameters(), lr=lr, weight_decay=5e-4)\n",
     "    \n",
     "    for epoch in range(num_epochs):\n",
+    "        loss = 0.0\n",
+    "        rng.shuffle(cascades)\n",
+    "        batches = [cascades[i:i+batch_size] for i in range(0, len(cascades), batch_size)]\n",
     "        optimizer.zero_grad()\n",
-    "        \n",
-    "        # Get edge probabilities\n",
-    "        edge_probs = model.forward(edge_index)\n",
-    "        \n",
-    "        # Compute total negative log likelihood across all cascades\n",
-    "        total_loss = compute_loss(num_nodes, edge_probs, edge_index, cascades)\n",
-    "            \n",
-    "        # Backward pass and optimization\n",
-    "        total_loss.backward()\n",
-    "        optimizer.step()\n",
+    "\n",
+    "        for batch in batches:\n",
+    "            optimizer.zero_grad()\n",
+    "            # Get edge probabilities\n",
+    "            edge_probs = model.forward(edge_index)\n",
+    "\n",
+    "            batch_loss = compute_loss(edge_probs, adj_list, batch)\n",
+    "            batch_loss.backward()\n",
+    "            optimizer.step()\n",
+    "            loss += batch_loss.item()\n",
     "        \n",
     "        if verbose and (epoch + 1) % 10 == 0:\n",
-    "            print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {total_loss.item():.4f}\")\n",
-    "            \n",
-    "    return model"
+    "            print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {loss:.4f}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_dataset(G: nx.DiGraph):\n",
     "  edge_index = torch.tensor(list(G.edges)).t().contiguous()\n",
-    "  return edge_index\n",
+    "  adj_list = {v : (set(), set()) for v in G.nodes}\n",
+    "  for e in G.edges:\n",
+    "    u, v = e\n",
+    "    adj_list[u][1].add(v)\n",
+    "    adj_list[v][0].add(u)\n",
+    "  return edge_index, adj_list\n",
     "\n",
-    "n = 100\n",
-    "p = 0.1\n",
-    "gname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
-    "path = Path(f\"datasets/synthetic/{gname}\")\n",
+    "#n = 100\n",
+    "#p = 0.2\n",
+    "#gname = f\"er_{n}_{str(p).replace('.', '')}\"\n",
+    "#gname = \"ba_500_2\"\n",
+    "#gname = \"sf_1500_041_054_005\"\n",
+    "gname = \"ego-facebook\"\n",
+    "#gname = \"er_100_01\"\n",
+    "path = Path(f\"datasets/real/{gname}\")\n",
     "\n",
     "with open(path / f\"graph.mtx\", \"rb\") as fh:\n",
     "  G = nx.from_scipy_sparse_array(sp.io.mmread(fh), create_using=nx.DiGraph)\n",
@@ -214,12 +239,33 @@
     "\n",
     "n = G.number_of_nodes()\n",
     "m = G.number_of_edges()\n",
-    "edge_index = create_dataset(G)"
+    "edge_index, adj_list = create_dataset(G)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_len = 0\n",
+    "for c in cascades:\n",
+    "    #print(c)\n",
+    "    max_len = max(max_len, len(c))\n",
+    "print(max_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -227,36 +273,55 @@
      "output_type": "stream",
      "text": [
       "M\tMAE\t\t\tTime\n",
-      "50\t0.11282437032234749\t62.161320209503174\n",
-      "75\t0.1128496569819863\t85.11591601371765\n",
-      "100\t0.11264070895806556\t107.75343155860901\n"
+      "50\t0.07867444117853627\t12084.335420846939\n",
+      "100\t0.13385399025532807\t24701.671295404434\n"
      ]
     }
    ],
    "source": [
     "l1_errors = []\n",
     "times = []\n",
-    "cascade_sizes = [50, 75, 100]\n",
+    "#cascade_sizes = [50, 100, 150]\n",
+    "cascade_sizes = [50, 100, 150, 200, 250]\n",
+    "results_path = Path(f\"results/gnn/\", )\n",
+    "\n",
+    "print(\"M\\tMAE\\t\\t\\tTime\")\n",
+    "with open(results_path / \"gnn.txt\", \"a\") as fh:\n",
+    "        fh.write(f\"\\nGraph: {gname}\\n\")\n",
+    "        fh.write(\"M\\t\\tMAE\\t\\t\\t\\t\\t\\tTime\\n\")\n",
+    "\n",
     "for k in cascade_sizes:\n",
     "    start = time.time()\n",
-    "    model = CascadeGNN(n, hidden_dim=64, num_layers=3)\n",
-    "    trained_model = train_cascade_gnn(model, n, edge_index, cascades[:k], num_epochs=40, lr=0.01, verbose=False)\n",
+    "    model = CascadeGNN(n, m, hidden_dim=16, num_layers=2)\n",
+    "    #trained_model = \n",
+    "    train_cascade_gnn(model, edge_index, cascades[:k], adj_list, num_epochs=35, lr=0.01, verbose=False)\n",
     "    end = time.time()\n",
     "    times.append(end-start)\n",
     "\n",
-    "    trained_model.eval()\n",
-    "    edge_probs = trained_model(edge_index)\n",
+    "    model.eval()\n",
+    "    edge_probs = model(edge_index)\n",
     "    residuals = []\n",
+    "    H = nx.DiGraph()\n",
     "    for i, e in enumerate(G.edges()):\n",
     "        u, v = e\n",
     "        p = G[u][v]['weight']\n",
     "        residuals.append(abs(p - edge_probs[e].item()))\n",
+    "        H.add_edge(u, v, weight=edge_probs[e].item())\n",
     "\n",
-    "    l1_errors.append(sum(residuals) / len(residuals))\n",
+    "    l1_err = sum(residuals) / len(residuals)\n",
+    "    l1_errors.append(l1_err)\n",
+    "    print(f\"{k}\\t{l1_err}\\t{end-start}\")\n",
+    "    with open(results_path / \"gnn.txt\", \"a\") as fh:\n",
+    "        fh.write(f\"{k}\\t\\t{l1_err}\\t\\t{end-start}\\n\")\n",
     "\n",
-    "print(\"M\\tMAE\\t\\t\\tTime\")\n",
-    "for i, k in enumerate(cascade_sizes):\n",
-    "    print(f\"{k}\\t{l1_errors[i]}\\t{times[i]}\")"
+    "    graph_path = results_path / f\"{gname}_{k}.mtx\"\n",
+    "    with graph_path.open('wb') as fh:\n",
+    "        mat = nx.to_scipy_sparse_array(H)\n",
+    "        sp.io.mmwrite(fh, mat, precision=5)\n",
+    "\n",
+    "#rint(\"M\\tMAE\\t\\t\\tTime\")\n",
+    "#for i, k in enumerate(cascade_sizes):\n",
+    "#    print(f\"{k}\\t{l1_errors[i]}\\t{times[i]}\")"
    ]
   },
   {
