--- a/imm_experiments.ipynb
+++ b/imm_experiments.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -154,22 +154,125 @@
       "╒═════╤═════════╤══════════╤════════════════╕\n",
       "│   k │     GNN │   Slicer │   Ground Truth │\n",
       "╞═════╪═════════╪══════════╪════════════════╡\n",
-      "│   1 │ 2744.39 │  2450.47 │        2928.41 │\n",
+      "│   1 │ 2769.94 │  2383.51 │        2926.18 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   2 │ 2941.84 │  2920.99 │        3030.8  │\n",
+      "│   2 │ 2941.57 │  2920.91 │        3026.54 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   4 │ 2941.41 │  2942.73 │        3071.72 │\n",
+      "│   4 │ 2939.99 │  2964.78 │        3070.88 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   8 │ 2983.83 │  3053.37 │        3091.14 │\n",
+      "│   8 │ 2981.13 │  3048.69 │        3092.71 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  16 │ 2993.74 │  3093.97 │        3107    │\n",
+      "│  16 │ 2991.99 │  3094.37 │        3107.43 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  32 │ 3024.28 │  3113.64 │        3118.72 │\n",
+      "│  32 │ 3024.78 │  3113.97 │        3128.99 │\n",
       "╘═════╧═════════╧══════════╧════════════════╛\n"
      ]
     }
    ],
    "source": [
+    "from tabulate import tabulate\n",
+    "\n",
+    "headers = ['k', 'GNN', 'Slicer', 'Ground Truth']\n",
+    "table = [headers]\n",
+    "for i in range(len(spreads)):\n",
+    "    k = 2**i\n",
+    "    table.append([f\"{k}\", *spreads[i]])\n",
+    "print(tabulate(table, headers='firstrow', tablefmt='fancy_grid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gnn_seeds = [\n",
+    "    [107],\n",
+    "    [351, 3833,],\n",
+    "    [107, 3851, 3254, 3266,],\n",
+    "    [351, 3833, 3228, 3266, 271, 3836, 3818, 3267,],\n",
+    "    [809, 3833, 3228, 3266, 290, 3779, 3836, 3815, 4017, 3791, 4015, 3267, 488, 2037, 3812, 3803,],\n",
+    "    [351, 3974, 3764, 3266, 199, 3779, 3858, 3815, 4011, 3267, 4015, 1513, 3985, 3791, 2037, 488, 3813, 78, 3803, 1374, 3979, 4029, 3812, 4038, 3903, 3824, 1924, 3651, 3801, 710, 3798, 4036,],\n",
+    "]\n",
+    "\n",
+    "slicer_seeds = [\n",
+    "    [104],\n",
+    "    [297, 1992],\n",
+    "    [297, 1882, 1827, 2282,],\n",
+    "    [297, 1945, 1827, 2282, 1742, 3655, 1572, 3985,],\n",
+    "    [297, 1959, 1827, 2282, 1759, 1572, 3985, 3655, 2727, 624, 4028, 19, 259, 2033, 4002, 1947,],\n",
+    "    [297, 1937, 1827, 2282, 1742, 1572, 3655, 4024, 2727, 259, 889, 19, 4028, 1947, 2033, 4002, 3388, 3995, 597, 1834, 2864, 3702, 1680, 4020, 2019, 1943, 3700, 624, 327, 198, 321, 1852,]\n",
+    "]\n",
+    "\n",
+    "actual_seeds = [\n",
+    "    [107],\n",
+    "    [107, 1831,],\n",
+    "    [107, 1831, 2088, 142,],\n",
+    "    [107, 1831, 1821, 26, 1827, 115, 3575, 4000,],\n",
+    "    [107, 1831, 2055, 0, 1827, 3761, 3652, 2596, 3985, 2489, 326, 1794, 181, 175, 1518, 1934,],\n",
+    "    [107, 1831, 2088, 26, 1827, 312, 3985, 3575, 2489, 3687, 2596, 1794, 99, 181, 1934, 2442, 3722, 1518, 2016, 3645, 3995, 2009, 4000, 2031, 319, 3521, 3652, 1680, 2384, 1912, 3179, 624,]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "╒═════╤═════════╤══════════╤════════════════╕\n",
+      "│   k │     GNN │   Slicer │   Ground Truth │\n",
+      "╞═════╪═════════╪══════════╪════════════════╡\n",
+      "│   1 │ 2916.3  │  2570.79 │        2919.97 │\n",
+      "├─────┼─────────┼──────────┼────────────────┤\n",
+      "│   2 │ 2944.12 │  2817.27 │        3034.36 │\n",
+      "├─────┼─────────┼──────────┼────────────────┤\n",
+      "│   4 │ 2959.34 │  2963.85 │        3074.84 │\n",
+      "├─────┼─────────┼──────────┼────────────────┤\n",
+      "│   8 │ 2982.87 │  3069.64 │        3095.42 │\n",
+      "├─────┼─────────┼──────────┼────────────────┤\n",
+      "│  16 │ 3007.96 │  3096.06 │        3110.18 │\n",
+      "├─────┼─────────┼──────────┼────────────────┤\n",
+      "│  32 │ 3101.34 │  3121.54 │        3136.4  │\n",
+      "╘═════╧═════════╧══════════╧════════════════╛\n"
+     ]
+    }
+   ],
+   "source": [
+    "spreads = []\n",
+    "for i in range(len(actual_seeds)):\n",
+    "    gnn_spread = monto_carlo_spread(G_actual, gnn_seeds[i], T=1000)\n",
+    "    slicer_spread = monto_carlo_spread(G_actual, slicer_seeds[i], T=1000)\n",
+    "    actual_spread = monto_carlo_spread(G_actual, actual_seeds[i], T=1000)\n",
+    "    spreads.append([gnn_spread, slicer_spread, actual_spread])\n",
+    "\n",
+    "from tabulate import tabulate\n",
+    "\n",
+    "headers = ['k', 'GNN', 'Slicer', 'Ground Truth']\n",
+    "table = [headers]\n",
+    "for i in range(len(spreads)):\n",
+    "    k = 2**i\n",
+    "    table.append([f\"{k}\", *spreads[i]])\n",
+    "print(tabulate(table, headers='firstrow', tablefmt='fancy_grid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spreads = []\n",
+    "for i in range(len(actual_seeds)):\n",
+    "    T = 100\n",
+    "    gnn_spread = monto_carlo_spread(G_actual, gnn_seeds[i], T)\n",
+    "    slicer_spread = monto_carlo_spread(G_actual, slicer_seeds[i], T)\n",
+    "    actual_spread = monto_carlo_spread(G_actual, actual_seeds[i], T)\n",
+    "    spreads.append([gnn_spread, slicer_spread, actual_spread])\n",
+    "\n",
     "from tabulate import tabulate\n",
     "\n",
     "headers = ['k', 'GNN', 'Slicer', 'Ground Truth']\n",
