reran infmax experiment

--- a/imm_experiments.ipynb
+++ b/imm_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,18 +95,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### eps = 0.1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "gnn_seeds = [\n",
-    "    [0],\n",
-    "    [136, 3974,],\n",
-    "    [107, 3974, 3410, 3266,],\n",
-    "    [351, 3833, 3434, 3266, 342, 3917, 3815, 3786,],\n",
-    "    [107, 3833, 3522, 3266, 186, 3836, 1374, 3779, 4011, 3790, 3265, 2335, 1513, 3329, 3267, 1198,],\n",
-    "    [107, 3841, 3766, 3266, 186, 3858, 3818, 3267, 1513, 488, 3785, 2037, 1562, 3812, 3860, 640, 4038, 3921, 1793, 3790, 1374, 4029, 3786, 756, 3979, 3791, 4035, 3692, 2202, 112, 3987, 3978,],\n",
+    "    [107],\n",
+    "    [107, 1973,],\n",
+    "    [107, 1839, 2078, 1827,],\n",
+    "    [107, 1831, 3556, 1827, 36, 3687, 3717, 3625,],\n",
+    "    [0, 1831, 2090, 1827, 3531, 1828, 3857, 1513, 2012, 1374, 3905, 3860, 2033, 3535, 2004, 3720,],\n",
+    "    [107, 1864, 3774, 325, 1827, 3687, 4022, 3926, 2012, 4024, 3577, 3857, 3686, 1859, 1513, 3820, 3717, 2018, 1828, 2030, 3574, 4035, 3595, 3994, 3600, 3918, 1837, 2000, 3961, 2682, 3535, 756,],\n",
     "]\n",
     "\n",
     "slicer_seeds = [\n",
@@ -130,21 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "spreads = []\n",
     "for i in range(len(actual_seeds)):\n",
-    "    gnn_spread = monto_carlo_spread(G_actual, gnn_seeds[i])\n",
-    "    slicer_spread = monto_carlo_spread(G_actual, slicer_seeds[i])\n",
-    "    actual_spread = monto_carlo_spread(G_actual, actual_seeds[i])\n",
+    "    gnn_spread = monto_carlo_spread(G_actual, gnn_seeds[i], T=1000)\n",
+    "    slicer_spread = monto_carlo_spread(G_actual, slicer_seeds[i], T=1000)\n",
+    "    actual_spread = monto_carlo_spread(G_actual, actual_seeds[i], T=1000)\n",
     "    spreads.append([gnn_spread, slicer_spread, actual_spread])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,17 +161,17 @@
       "╒═════╤═════════╤══════════╤════════════════╕\n",
       "│   k │     GNN │   Slicer │   Ground Truth │\n",
       "╞═════╪═════════╪══════════╪════════════════╡\n",
-      "│   1 │ 2769.94 │  2383.51 │        2926.18 │\n",
+      "│   1 │ 2926.05 │  2419.32 │        2921.37 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   2 │ 2941.57 │  2920.91 │        3026.54 │\n",
+      "│   2 │ 3030.85 │  2911.36 │        3030.3  │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   4 │ 2939.99 │  2964.78 │        3070.88 │\n",
+      "│   4 │ 3063.44 │  2957.02 │        3072.5  │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   8 │ 2981.13 │  3048.69 │        3092.71 │\n",
+      "│   8 │ 3083.88 │  3049.21 │        3090.45 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  16 │ 2991.99 │  3094.37 │        3107.43 │\n",
+      "│  16 │ 3101.1  │  3094.92 │        3105.26 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  32 │ 3024.78 │  3113.97 │        3128.99 │\n",
+      "│  32 │ 3122.61 │  3112.94 │        3128.86 │\n",
       "╘═════╧═════════╧══════════╧════════════════╛\n"
      ]
     }
@@ -181,18 +188,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### eps = 0.03"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "gnn_seeds = [\n",
-    "    [107],\n",
-    "    [351, 3833,],\n",
-    "    [107, 3851, 3254, 3266,],\n",
-    "    [351, 3833, 3228, 3266, 271, 3836, 3818, 3267,],\n",
-    "    [809, 3833, 3228, 3266, 290, 3779, 3836, 3815, 4017, 3791, 4015, 3267, 488, 2037, 3812, 3803,],\n",
-    "    [351, 3974, 3764, 3266, 199, 3779, 3858, 3815, 4011, 3267, 4015, 1513, 3985, 3791, 2037, 488, 3813, 78, 3803, 1374, 3979, 4029, 3812, 4038, 3903, 3824, 1924, 3651, 3801, 710, 3798, 4036,],\n",
+    "    [809],\n",
+    "    [351, 1987,],\n",
+    "    [107, 1831, 3769, 1827,],\n",
+    "    [107, 1973, 3581, 1827, 25, 4031, 3573, 2031,],\n",
+    "    [464, 1973, 3805, 1827, 9, 4031, 3531, 3857, 2031, 1828, 3955, 4021, 1984, 4002, 3926, 2027,],\n",
+    "    [351, 1831, 2088, 1827, 26, 4031, 3531, 2031, 3857, 1828, 3773, 3913, 4002, 1984, 4021, 4001, 3746, 3833, 3639, 3717, 4017, 488, 3586, 3985, 2040, 3678, 3484, 2020, 3541, 1961, 889, 2024,],\n",
     "]\n",
     "\n",
     "slicer_seeds = [\n",
@@ -201,7 +215,8 @@
     "    [297, 1882, 1827, 2282,],\n",
     "    [297, 1945, 1827, 2282, 1742, 3655, 1572, 3985,],\n",
     "    [297, 1959, 1827, 2282, 1759, 1572, 3985, 3655, 2727, 624, 4028, 19, 259, 2033, 4002, 1947,],\n",
-    "    [297, 1937, 1827, 2282, 1742, 1572, 3655, 4024, 2727, 259, 889, 19, 4028, 1947, 2033, 4002, 3388, 3995, 597, 1834, 2864, 3702, 1680, 4020, 2019, 1943, 3700, 624, 327, 198, 321, 1852,]\n",
+    "    [297, 1937, 1827, 2282, 1742, 1572, 3655, 4024, 2727, 259, 889, 19, 4028, 1947, 2033, 4002, 3388, \n",
+    "     3995, 597, 1834, 2864, 3702, 1680, 4020, 2019, 1943, 3700, 624, 327, 198, 321, 1852,]\n",
     "]\n",
     "\n",
     "actual_seeds = [\n",
@@ -210,13 +225,14 @@
     "    [107, 1831, 2088, 142,],\n",
     "    [107, 1831, 1821, 26, 1827, 115, 3575, 4000,],\n",
     "    [107, 1831, 2055, 0, 1827, 3761, 3652, 2596, 3985, 2489, 326, 1794, 181, 175, 1518, 1934,],\n",
-    "    [107, 1831, 2088, 26, 1827, 312, 3985, 3575, 2489, 3687, 2596, 1794, 99, 181, 1934, 2442, 3722, 1518, 2016, 3645, 3995, 2009, 4000, 2031, 319, 3521, 3652, 1680, 2384, 1912, 3179, 624,]\n",
+    "    [107, 1831, 2088, 26, 1827, 312, 3985, 3575, 2489, 3687, 2596, 1794, 99, 181, 1934, 2442, 3722, 1518, \n",
+    "     2016, 3645, 3995, 2009, 4000, 2031, 319, 3521, 3652, 1680, 2384, 1912, 3179, 624,]\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -226,17 +242,17 @@
       "╒═════╤═════════╤══════════╤════════════════╕\n",
       "│   k │     GNN │   Slicer │   Ground Truth │\n",
       "╞═════╪═════════╪══════════╪════════════════╡\n",
-      "│   1 │ 2916.3  │  2570.79 │        2919.97 │\n",
+      "│   1 │ 2918.35 │  2601.05 │        2923.5  │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   2 │ 2944.12 │  2817.27 │        3034.36 │\n",
+      "│   2 │ 3027.76 │  2800.85 │        3030.73 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   4 │ 2959.34 │  2963.85 │        3074.84 │\n",
+      "│   4 │ 3065.31 │  3000.76 │        3072.25 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│   8 │ 2982.87 │  3069.64 │        3095.42 │\n",
+      "│   8 │ 3093.38 │  3072.11 │        3093.94 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  16 │ 3007.96 │  3096.06 │        3110.18 │\n",
+      "│  16 │ 3103.91 │  3089.46 │        3110.15 │\n",
       "├─────┼─────────┼──────────┼────────────────┤\n",
-      "│  32 │ 3101.34 │  3121.54 │        3136.4  │\n",
+      "│  32 │ 3123.33 │  3120.36 │        3137.84 │\n",
       "╘═════╧═════════╧══════════╧════════════════╛\n"
      ]
     }
